Power calculation for trial

--- a/rachaels_project.ipynb
+++ b/rachaels_project.ipynb
@@ -1615,13 +1615,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "id": "fb2ef33b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of trials with p-value < 0.005: 0.194\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the number of simulations\n",
-    "n_simulations = 10000\n",
+    "n_simulations = 1000\n",
     "\n",
     "# Define the sample size per group\n",
     "n_patients_per_group = 20\n",
@@ -1649,6 +1657,60 @@
     "# Print the result\n",
     "print(f\"Proportion of trials with p-value < 0.005: {proportion_significant:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "eb2715f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of trials with p-value < 0.005: 0.806\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new trial with 60 patients per group\n",
+    "\n",
+    "n_simulations = 1000\n",
+    "\n",
+    "# Define the sample size per group\n",
+    "n_patients_per_group = 60\n",
+    "\n",
+    "# Define the parameters for the simulate_trial function\n",
+    "pre_mean = 5.75\n",
+    "pre_std = 2.48\n",
+    "vr_mean = -1\n",
+    "vr_std = 1\n",
+    "within_mean = -1\n",
+    "within_std = 1\n",
+    "\n",
+    "# Initialize a list to store the p-values\n",
+    "p_values = []\n",
+    "\n",
+    "# Run the simulations\n",
+    "for i in range(n_simulations):\n",
+    "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
+    "    p_values.append(p_value)\n",
+    "\n",
+    "# Calculate the proportion of trials with p-value < 0.005\n",
+    "significant_results = sum(p < 0.005 for p in p_values)\n",
+    "proportion_significant = significant_results / n_simulations\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Proportion of trials with p-value < 0.005: {proportion_significant:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d03dab1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
