--- a/rachaels_project.ipynb
+++ b/rachaels_project.ipynb
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "fb2ef33b",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1623,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proportion of trials with p-value < 0.005: 0.194\n"
+      "Proportion of trials with p-value < 0.05: 0.216\n"
      ]
     }
    ],
@@ -1650,17 +1650,17 @@
     "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
     "    p_values.append(p_value)\n",
     "\n",
-    "# Calculate the proportion of trials with p-value < 0.005\n",
-    "significant_results = sum(p < 0.005 for p in p_values)\n",
+    "# Calculate the proportion of trials with p-value < 0.05\n",
+    "significant_results = sum(p < 0.05 for p in p_values)\n",
     "proportion_significant = significant_results / n_simulations\n",
     "\n",
     "# Print the result\n",
-    "print(f\"Proportion of trials with p-value < 0.005: {proportion_significant:.3f}\")"
+    "print(f\"Proportion of trials with p-value < 0.05: {proportion_significant:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "id": "eb2715f5",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1668,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proportion of trials with p-value < 0.005: 0.806\n"
+      "Proportion of trials with p-value < 0.05: 0.957\n"
      ]
     }
    ],
@@ -1696,18 +1696,202 @@
     "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
     "    p_values.append(p_value)\n",
     "\n",
-    "# Calculate the proportion of trials with p-value < 0.005\n",
-    "significant_results = sum(p < 0.005 for p in p_values)\n",
+    "# Calculate the proportion of trials with p-value < 0.05\n",
+    "significant_results = sum(p < 0.05 for p in p_values)\n",
     "proportion_significant = significant_results / n_simulations\n",
     "\n",
     "# Print the result\n",
-    "print(f\"Proportion of trials with p-value < 0.005: {proportion_significant:.3f}\")"
+    "print(f\"Proportion of trials with p-value < 0.05: {proportion_significant:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "9e68e333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of trials with p-value < 0.05: 0.832\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new trial with 40 patients per group\n",
+    "\n",
+    "n_simulations = 1000\n",
+    "\n",
+    "# Define the sample size per group\n",
+    "n_patients_per_group = 40\n",
+    "\n",
+    "# Define the parameters for the simulate_trial function\n",
+    "pre_mean = 5.75\n",
+    "pre_std = 2.48\n",
+    "vr_mean = -1\n",
+    "vr_std = 1\n",
+    "within_mean = -1\n",
+    "within_std = 1\n",
+    "\n",
+    "# Initialize a list to store the p-values\n",
+    "p_values = []\n",
+    "\n",
+    "# Run the simulations\n",
+    "for i in range(n_simulations):\n",
+    "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
+    "    p_values.append(p_value)\n",
+    "\n",
+    "# Calculate the proportion of trials with p-value < 0.05\n",
+    "significant_results = sum(p < 0.05 for p in p_values)\n",
+    "proportion_significant = significant_results / n_simulations\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Proportion of trials with p-value < 0.05: {proportion_significant:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "164e8ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of trials with p-value < 0.05: 0.921\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new trial with 50 patients per group\n",
+    "\n",
+    "n_simulations = 1000\n",
+    "\n",
+    "# Define the sample size per group\n",
+    "n_patients_per_group = 50\n",
+    "\n",
+    "# Define the parameters for the simulate_trial function\n",
+    "pre_mean = 5.75\n",
+    "pre_std = 2.48\n",
+    "vr_mean = -1\n",
+    "vr_std = 1\n",
+    "within_mean = -1\n",
+    "within_std = 1\n",
+    "\n",
+    "# Initialize a list to store the p-values\n",
+    "p_values = []\n",
+    "\n",
+    "# Run the simulations\n",
+    "for i in range(n_simulations):\n",
+    "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
+    "    p_values.append(p_value)\n",
+    "\n",
+    "# Calculate the proportion of trials with p-value < 0.05\n",
+    "significant_results = sum(p < 0.05 for p in p_values)\n",
+    "proportion_significant = significant_results / n_simulations\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Proportion of trials with p-value < 0.05: {proportion_significant:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e13833d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of trials with p-value < 0.05: 0.917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new trial with 48 patients per group\n",
+    "\n",
+    "n_simulations = 1000\n",
+    "\n",
+    "# Define the sample size per group\n",
+    "n_patients_per_group = 48\n",
+    "\n",
+    "# Define the parameters for the simulate_trial function\n",
+    "pre_mean = 5.75\n",
+    "pre_std = 2.48\n",
+    "vr_mean = -1\n",
+    "vr_std = 1\n",
+    "within_mean = -1\n",
+    "within_std = 1\n",
+    "\n",
+    "# Initialize a list to store the p-values\n",
+    "p_values = []\n",
+    "\n",
+    "# Run the simulations\n",
+    "for i in range(n_simulations):\n",
+    "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
+    "    p_values.append(p_value)\n",
+    "\n",
+    "# Calculate the proportion of trials with p-value < 0.05\n",
+    "significant_results = sum(p < 0.05 for p in p_values)\n",
+    "proportion_significant = significant_results / n_simulations\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Proportion of trials with p-value < 0.05: {proportion_significant:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "e1a47cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of trials with p-value < 0.05: 0.903\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new trial with 47 patients per group\n",
+    "\n",
+    "n_simulations = 1000\n",
+    "\n",
+    "# Define the sample size per group\n",
+    "n_patients_per_group = 47\n",
+    "\n",
+    "# Define the parameters for the simulate_trial function\n",
+    "pre_mean = 5.75\n",
+    "pre_std = 2.48\n",
+    "vr_mean = -1\n",
+    "vr_std = 1\n",
+    "within_mean = -1\n",
+    "within_std = 1\n",
+    "\n",
+    "# Initialize a list to store the p-values\n",
+    "p_values = []\n",
+    "\n",
+    "# Run the simulations\n",
+    "for i in range(n_simulations):\n",
+    "    p_value = simulate_trial(n_patients_per_group, pre_mean, pre_std, within_mean, within_std, vr_mean, vr_std)\n",
+    "    p_values.append(p_value)\n",
+    "\n",
+    "# Calculate the proportion of trials with p-value < 0.05\n",
+    "significant_results = sum(p < 0.05 for p in p_values)\n",
+    "proportion_significant = significant_results / n_simulations\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Proportion of trials with p-value < 0.05: {proportion_significant:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d03dab1",
+   "id": "deb100e6",
    "metadata": {},
    "outputs": [],
    "source": []
