--- a/rachaels_project.ipynb
+++ b/rachaels_project.ipynb
@@ -1890,8 +1890,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "b5eb0b73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trial number</th>\n",
+       "      <th>group size</th>\n",
+       "      <th>proportion significant</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0.903</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   trial number  group size  proportion significant\n",
+       "0             1          20                   0.216\n",
+       "1             2          60                   0.957\n",
+       "2             3          40                   0.832\n",
+       "3             4          50                   0.921\n",
+       "4             5          48                   0.917\n",
+       "5             6          47                   0.903"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clinical_trial_df = pd.DataFrame()\n",
+    "clinical_trial_df['trial number'] = [1, 2, 3, 4, 5, 6]\n",
+    "clinical_trial_df['group size'] = [20, 60, 40, 50, 48, 47]\n",
+    "clinical_trial_df['proportion significant'] = [0.216, 0.957, 0.832, 0.921, 0.917, 0.903]\n",
+    "clinical_trial_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "deb100e6",
    "metadata": {},
    "outputs": [],
    "source": []
