contains code for simulating cost and patient recruitment differences

--- a/Clinical trial notebook_chronicpain.ipynb
+++ b/Clinical trial notebook_chronicpain.ipynb
@@ -747,7 +747,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Define parameters for additional simulations\n",
+    "recruitment_rates = [5, 10, 15]  # patients per month\n",
+    "treatment_durations = [4, 6, 8]  # weeks\n",
+    "follow_up_periods = [3, 6, 12]  # months\n",
+    "\n",
+    "# Simulate different recruitment strategies\n",
+    "def simulate_recruitment(n_patients, rate):\n",
+    "    months_needed = n_patients / rate\n",
+    "    return months_needed\n",
+    "\n",
+    "# Simulate different treatment durations and follow-up periods\n",
+    "def simulate_trial_duration(treatment_duration, follow_up_period):\n",
+    "    total_duration = treatment_duration + follow_up_period\n",
+    "    return total_duration\n",
+    "\n",
+    "# Example simulations\n",
+    "for rate in recruitment_rates:\n",
+    "    months_needed = simulate_recruitment(n_patients_per_group * 2, rate)\n",
+    "    print(f\"Recruitment rate {rate} patients/month: {months_needed} months needed\")\n",
+    "\n",
+    "for treatment_duration in treatment_durations:\n",
+    "    for follow_up_period in follow_up_periods:\n",
+    "        total_duration = simulate_trial_duration(treatment_duration, follow_up_period)\n",
+    "        print(f\"Treatment duration {treatment_duration} weeks, follow-up {follow_up_period} months: {total_duration} months total\")\n",
+    "\n",
+    "# Simulate costs\n",
+    "def simulate_costs(n_patients, rate, treatment_duration, follow_up_period):\n",
+    "    personnel_costs = 1000 * n_patients  # example cost per patient\n",
+    "    facilities_costs = 500 * treatment_duration  # example cost per week\n",
+    "    patient_incentives = 200 * n_patients  # example incentive per patient\n",
+    "    data_management_costs = 300 * n_patients  # example cost per patient\n",
+    "    regulatory_fees = 10000  # example fixed regulatory fee\n",
+    "    total_cost = (personnel_costs + facilities_costs + patient_incentives +\n",
+    "                  data_management_costs + regulatory_fees)\n",
+    "    return total_cost\n",
+    "\n",
+    "for rate in recruitment_rates:\n",
+    "    for treatment_duration in treatment_durations:\n",
+    "        for follow_up_period in follow_up_periods:\n",
+    "            total_cost = simulate_costs(n_patients_per_group * 2, rate, treatment_duration, follow_up_period)\n",
+    "            print(f\"Recruitment rate {rate}, treatment {treatment_duration} weeks, follow-up {follow_up_period} months: ${total_cost} total cost\")\n"
+   ]
   }
  ],
  "metadata": {
