Changes to clinical trial protocol text file

--- a/Clinical Trial Simulation.ipynb
+++ b/Clinical Trial Simulation.ipynb
@@ -37,7 +37,7 @@
    "id": "8b6bdb2a",
    "metadata": {},
    "source": [
-    "### The study design (protocol) is contained in the README file, below is a summary of the core elements: ###\n",
+    "### The study design (protocol) is contained in the **Clinical Trial Protocol.pdf** file in the GitHub repository, below is a summary of the core elements: ###\n",
     "\n",
     "**Aim(s) of the study:** \n",
     "\n",
